testsuite/tests/typecheck/should_fail/mc23.stderr

mc23.hs:9:29: error:
    • Couldn't match type ‘[a0]’ with ‘[a] -> m a’
      Expected type: (a -> b) -> [a] -> m a
        Actual type: [a0] -> [a0]
    • Possible cause: ‘take’ is applied to too many arguments
      In the expression: take 5
      In a stmt of a monad comprehension: then take 5 by x
      In the expression: [x | x <- [1 .. 10], then take 5 by x]
    • Relevant bindings include z :: m b (bound at mc23.hs:9:1)
